Changes from jTDS 1.0.2
=======================

02/28/2005 - Alin Sinpalean
 o Applied Mike's patch [1124854] SSO fixes - prevents error from crashing JVM.
 o Modified ClobImpl to use UCS-2 encoding for storing/retrieving character
   data to/from disk. Previously the default system encoding was used, causing
   characters not in the system encoding to be lost.
 o Corrected a resource (temp file) leak in ClobImpl and BlobImpl: the file
   property was set to null before deleting the file, possibly causing it to
   remain there until the JVM terminated.
 o Completely synchronized access to cancelPending and endOfResponse in TdsCore
   and cancelPending and responseOwner in SharedSocket. This should prevent any
   race conditions when a cancel() is issued.
 o Applied the rest of Mike's fix for bug [1152329] Spurious output params
   assigned (TIMESTMP). Missed part of it when doing the merge.
 o Added FAQ entry about Sybase batching, as discussed in bug report [1123350]
   Hang when executing performance test.

02/27/2005 - Alin Sinpalean
 o Enhanced update count caching implementation by always caching update counts
   up to the end of the response or beginning of the first ResultSet (whichever
   comes first) whenever the end of the current ResultSet is reached. This
   means it's no longer necessary to call getMoreResults() after the last
   ResultSet returned by a CallableStatement to get to the output parameters.
   Also removed the readAhead flag, which caused the rest of the response to
   be dumped when the end of the first ResultSet was reached for a
   CallableStatement.executeQuery.
 o Corrected a problem in SQLParser causing an error message with the wrong
   terminator value missing (i.e. ')' instead of '}' missing from
   "{call proc(?)").
 o Corrected a problem with output parameters being defined as Unicode even
   though sendStringParametersAsUnicode=false was specified.
 o Applied Mike's fix for bug [1152329] Spurious output params assigned